# linea-monorepo

./: .dockerignore  .editorconfig  .gas-report  .gas-snapshot  .gitattributes  .gitignore  .gitmodules  .npmrc  .prettierignore  .prettierrc.js  .test-ci-trigger.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GITHUB_ISSUE_EIP7702_TESTING.md  IMPLEMENTATION_SUMMARY.md  LICENSE  LICENSE.md  Makefile  QUICKSTART_EIP7702_ISSUE.md  README.md  SECURITY.md  build-rln-enabled-sequencer.sh  build.gradle  cliff.toml  codecov.yml  commitlint.config.mjs  daniel_discussion.md  doc_config.json  example.md  foundry.toml  gas.md  go.mod  gradle.properties  l2FeesAdapter.ts  makefile-contracts.mk  notes.md  package.json  pnpm-lock.yaml  (+10 more)
.claude/: settings.json
.ctags.d/: zkc.ctags
.cursor/: BUGBOT.md  Dockerfile  scratchpad.md
.githooks/: pre-commit
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml  path-filters.yml  pull_request_template.md
.husky/: commit-msg  pre-commit  pre-commit.js
.jreleaser/: jreleaser.yml
.run/: Coordinator.run.xml.template  TracesApi.run.xml.template  TransactionExclusionApi.run.xml.template
arithmetization/: Makefile  README.md
arithmetization/src/test/examples/rust/: Cargo.toml  add.rs  poseidon1.rs  riscv64im-unknown-none-elf.json
arithmetization/src/test/examples/rust/src/: blake.rs  blake_core.rs  blake_freestanding.rs  blake_from_main.rs  blake_test_vectors.rs  blake_with_in_bytes.rs  blake_with_in_embedded.rs  custom_std.rs  poseidon1.rs  stack_load_test.rs  test.rs
arithmetization/src/test/examples/rust/src/blake/: Makefile  README.md  blake.all  blake10.all  blake15.all  blake2f.all  blake2f_all_to_in_bytes.py  blake2f_to_in_bytes.py  blake30.all  blake_core.rs  blake_test_vectors.rs  blake_with_in_bytes.rs  blake_with_in_embedded.rs  run_blake2f_all.sh  run_blake2f_full.sh
arithmetization/src/test/examples/rust/src/keccak/: keccak  keccak.rs
arithmetization/src/test/examples/rust/src/poseidon1/: README.md  poseidon1_from_main  poseidon1_from_main.rs  poseidon1_software.rs  poseidon1_with_in_bytes.rs  poseidon1_with_in_embedded.rs
arithmetization/src/test/rust/: Cargo.toml  README.md
arithmetization/src/test/rust/src/: custom_std.rs  test.rs
arithmetization/src/test/rust/src/blake/: blake.all  blake_from_main.rs  blake_with_in_bytes.rs
arithmetization/src/test/rust/src/keccak/: keccak.rs
besu-plugins/: AGENTS.md
besu-plugins/linea-sequencer/sequencer/src/main/rust/rln_bridge/: Cargo.toml
besu-plugins/linea-sequencer/sequencer/src/main/rust/rln_bridge/src/: lib.rs
blake2f_modexp_data/: columns.lisp  constants.lisp  constraints.lisp
blake2fmodexpdata/: columns.lisp  constants.lisp  constraints.lisp
blockdata/: columns.lisp  constants-ethereum.lisp  constants-linea.lisp  constants.lisp  constraints.lisp  shorthands.lisp
blockhash/: columns.lisp  constants.lisp  constraints.lisp
bridge-ui/: .dockerignore  .env.production  .env.template  .env.test  .eslintrc.cjs  .eslintrc.js  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  README2.md  RELEASE-NOTES.md  environment.d.ts  eslint.config.mjs  jest-puppeteer.config.js  jest.config.js  next.config.mjs  next.config.ts  package-lock.json  package.json  playwright.config.ts  postcss.config.mjs  svg.d.ts  tailwind.config.js  tailwind.config.ts  tsconfig.json
buildSrc/: build.gradle  gradle.properties
certora/: certora.conf
config/: README.md
consensus-layer-app/: README.md
constants/: constants.lisp  evm.zkasm
constraints/: LICENSE  Makefile  README.md
contract-integrity-verifier/: ARCHITECTURE.md  README.md
contracts/: .env.template  .env.template.ci  .env.template.uat  .gitignore  .prettierignore  .solcover.js  .solhint.json  .solhintignore  AGENTS.md  Makefile  README.md  common.ts  deployments.json  eslint.config.mjs  foundry.toml  hardhat.config.ts  hardhat_overrides.ts  makefile-contracts.mk  mirror_linea_contracts.sh  new.txt  package-lock.json  package.json  prettier.config.mjs  remappings.txt  tsconfig.json
contracts-tge/: Makefile  foundry.toml
coordinator/: AGENTS.md  (+3 more)
prover/gpu/cuda/: CMakeLists.txt  CMakePresets.json
prover/gpu/cuda/include/: gnark_gpu.h  gnark_gpu_kb.h
prover/gpu/cuda/sandbox/: bench.cuh  main.cu
prover/gpu/cuda/src/plonk/: api.cu  ec.cuh  field.cuh  fp.cuh  fr_arith.cuh  fr_ops.cu  kernels.cu  msm.cu  ntt.cu  plonk_eval.cu  plonk_z.cu
prover/gpu/cuda/src/plonk2/: ec.cuh  field.cuh  g1.cu  kernels.cu  mimc.cu  msm.cu
prover/gpu/cuda/src/vortex/: kb.cu  kb_field.cuh
verifier-risc5/toolchains/libriscv/: CMakeLists.txt  runner.cpp
(+20947 files in other folders)
