[package]
name = "riscv-tests"
version = "0.1.0"
edition = "2021"

# Add a [[bin]] entry for each new .rs test file added to src/
[[bin]]
name = "blake"
path = "src/blake.rs"

[[bin]]
name = "blake_with_in_bytes"
path = "src/blake_with_in_bytes.rs"

[[bin]]
name = "test"
path = "src/test.rs"

[profile.release]
opt-level = 2
debug = false
