[package]
name = "rln_bridge"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"] # Essential for JNI shared library

[dependencies]
jni = "0.21.1"
hex = "0.4"
rln = { git = "https://github.com/vacp2p/zerokit.git" }

ark-bn254 = { version = "0.5.0", features = ["std"] }
ark-groth16 = { version = "0.5.0", default-features = false, features = ["parallel"] }
ark-relations = { version = "0.5.1", features = ["std"] }
ark-serialize = { version = "0.5.0", default-features = false, features = ["parallel"] }
ark-ff = { version = "0.5.0", default-features = false, features = ["parallel"] }
ark-ec = { version = "0.5.0", default-features = false, features = ["parallel"] }
ark-std = { version = "0.5.0", default-features = false, features = ["parallel"] }

[profile.release]
lto = true
opt-level = 'z' # Optimize for size
strip = true 